--- a/index.html
+++ b/index.html
@@ -181,8 +181,6 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
-<li>$:/temp/search</li>
-
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9575,7 +9573,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191126064752089" list="[[Lambda Calculus]] [[Model Theory]] [[A New Math for Learning Tasks (1)]] [[A New Math for Learning Tasks (2)]] Welcome [[How to Contribute?]]" modified="20191126072912373" title="$:/StoryList" revision="32" bag="default">
+<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9623,11 +9621,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9635,9 +9633,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20191126064747560" modified="20191126072910923" title="$:/temp/search" revision="17" bag="default">
-<pre>lamb</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9751,7 +9746,7 @@ Error message and password prompt
 <div created="20191121035138747" modified="20191121035148674" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>classic</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191124054651558" modified="20191126070748216" tags="ongoing [[intelligence project]] research" title="A New Math for Learning Tasks (1)" type="text/vnd.tiddlywiki" revision="3" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191124054651558" modified="20191126070749286" tags="ongoing [[intelligence project]] research" title="A New Math for Learning Tasks (1)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>The idea emerged initially as a desire to define an inner product space for the set of reinforcement learning tasks to optimize  the work done by auxiliary tasks like in [[Discovery of Useful Questions as Auxiliary Tasks]]. 
 
 After discussion, it seems unlikely that the space we are dealing with can be modeled as a vector space. Maybe more a more general structure such as a topological space would be more useful as it demands less structure. Techniques from [[Topological Data Analysis]] such as [[Persistent Homology]] might be useful as they are able to capture more qualitative notions of similarity and difference. 
@@ -9781,7 +9776,7 @@ Another interesting way would be to work from specific samples but from differen
 
 [[A New Math for Learning Tasks (2)]]</pre>
 </div>
-<div author="Siddharth Joshi" created="20191126070723011" modified="20191126072116994" tags="research ongoing [[intelligence project]]" title="A New Math for Learning Tasks (2)" revision="5" bag="default">
+<div author="Siddharth Joshi" created="20191126070723011" modified="20191126072118070" tags="research ongoing [[intelligence project]]" title="A New Math for Learning Tasks (2)" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>There is another issue with defining a mathematics for learning tasks and that is that there are infinitely many representations of what is to a human, obviously the same learning tasks even if we were to fix a representational style. This is due to the fact that it is possible to consider the tasks at various differing granularities with the state diagram changing drastically. E.g. the task of playing video game X can be modeled rather uselessly by three states as well: start game --- take action ----&gt; win game or --- take other action --&gt; lose game. To avoid the nightmare of dealing with such trivial cases, an assumption that forces either some minimum degree or some exact amount of meaningfulness (which itself must be defined) in the chosen representation. 
 
 A potential candidate for defining meaningfulness may be the cryptographic notion indistinguishability. If every machine (discussion on its computational bounds follows) cannot distinguish between a given representation and the description of a meaningless task defined as above then it should be considered meaningless. As soon as we introduce this Turing Test-like idea to determine how meaningful something is, it is critical to consider what computational bounds do we place on our machine and to force our representations to be sufficiently easy to extract information from, the lower the bound the better. For lack of a better reason than borrowing convention, let's assume our machines belong to the class of [[Probabilistic Polynomial Time]] Algorithms. A second concern is that for such a definition to work, we would need to define some initial set of meaningless representations. This is tricky and may make this route infeasible. 
@@ -9913,7 +9908,7 @@ and many more things that you can look up by googling tiddlywiki
 
 Thanks for contributing!</pre>
 </div>
-<div created="20191124070525772" modified="20191126073014889" tags="incomplete [[theoretical computer science]] math" title="Lambda Calculus" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20191124070525772" modified="20191126073015986" tags="incomplete [[theoretical computer science]] math" title="Lambda Calculus" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Lambda calculus (also written as λ-calculus) is a formal system in mathematical logic for expressing computation based on function abstraction and application using variable binding and substitution. It is a universal model of computation that can be used to simulate any Turing machine.
 
 It is the fundamental basis for all functional programming languages. </pre>
@@ -9930,7 +9925,7 @@ It is the fundamental basis for all functional programming languages. </pre>
 <div created="20191120053237171" modified="20191121010456596" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div author="Siddharth Joshi" created="20191126064803358" modified="20191126072900485" tags="incomplete philosophy logic" title="Model Theory" revision="2" bag="default">
+<div author="Siddharth Joshi" created="20191126064803358" modified="20191126072901553" tags="incomplete philosophy logic" title="Model Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://plato.stanford.edu/entries/model-theory/</pre>
 </div>
 <div author="Siddharth Joshi" created="20191122040921452" modified="20191122041302705" tags="[[learning algorithm selection]] [[machine learning]]" title="Non-linearity of Data" type="text/vnd.tiddlywiki" revision="0" bag="default">
