Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -210,6 +212,8 @@ Error message and password prompt
 <li>Do Calculus</li>
 
 <li>Explainability of Model</li>
+
+<li>For Every and There Exists</li>
 
 <li>GVF</li>
 
@@ -9746,7 +9750,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
+<div created="20191227163935771" list="[[UCLA Math 131AH - Real Analysis]] [[For Every and There Exists]] [[UCLA Math 115A - Linear Algebra]] Welcome [[How to Contribute?]]" modified="20191227164358643" title="$:/StoryList" revision="10" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9806,6 +9810,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20191227163933360" modified="20191227163934310" title="$:/temp/search" revision="8" bag="default">
+<pre>ucla mat</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -10078,6 +10085,11 @@ tbd
 
 e.g. [[Neural Networks]], [[Ensemble Models]] are hard to explain but very accurate as opposed to [[K Nearest Neighbors]], [[Linear Regression]], [[Decision Tree Learning]] are quite easy to explain but perhaps not as accurate</pre>
 </div>
+<div created="20191227164059875" modified="20191227164350267" tags="math logic [[real analysis]]" title="For Every and There Exists" revision="1" bag="default">
+<pre>* Negation of a for every x, proposition is true is there exists x such that proposition is false
+* Can swap the order of two adjacent for every or two adjacent there exists without changing logical meaning
+* Cannot swap the order of for every and there exists, in particular: There exists y such that for every x ... is stronger than for every x there exists y ...</pre>
+</div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
@@ -10211,7 +10223,7 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 # [[Diagonalization]]
 # [[Inner Products]]</pre>
 </div>
-<div author="Siddharth Joshi" created="20191120203243535" modified="20191121010940956" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191120203243535" modified="20191227164048701" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>!!! Syllabus
 # [[Basic Logic | For Every and There Exists]]
 # [[Natural Numbers]]
@@ -10226,7 +10238,9 @@ This is a chapter by chapter summary of the topics covered in The Hundred-Page M
 # [[Series]]
 # [[Rearrangements of Series]]
 # [[Functions]]
-# [[Cardinality]]</pre>
+# [[Cardinality]]
+# [[Metric Topology]]
+# [[Complete Metric Spaces]]</pre>
 </div>
 <div author="Siddharth Joshi" created="20191119180323660" modified="20191121034908978" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
 <pre>Hi, welcome to my TiddlyWiki!
